--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "apscheduler>=3.11.0",
     "asyncpg>=0.30.0",
     "fastapi[all]>=0.115.12",
+    "greenlet>=3.2.4",
     "passlib[bcrypt]>=1.7.4",
     "pyjwt>=2.10.1",
     "scalar-fastapi>=1.0.3",
